# Trinity-RFT

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_zh.md  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docker.yaml  pre-commit.yaml  sphinx-doc.yaml  unittest.yaml
_modules/: functools.html  index.html  ray.html
_sources/build_api/: trinity.algorithm.add_strategy.rst.txt  trinity.algorithm.policy_loss_fn.rst.txt  trinity.algorithm.rst.txt  trinity.buffer.rst.txt  trinity.buffer.writer.rst.txt  trinity.common.models.rst.txt  trinity.common.rewards.rst.txt  trinity.common.rst.txt  trinity.common.workflows.rst.txt  trinity.explorer.rst.txt  trinity.manager.config_registry.rst.txt  trinity.manager.rst.txt  trinity.rst.txt  trinity.trainer.verl.rst.txt  trinity.utils.rst.txt
benchmark/: README.md  bench.py
benchmark/config/: alfworld-template.yaml  countdown-template.yaml  frozenlake-template.yaml  gsm8k-template.yaml  guru_math-template.yaml
benchmark/reports/: alfworld.md  frozenlake.md  gsm8k.md  guru_math.md
benchmark/scripts/: gen_countdown_data.py  gen_guru_math_data.py  get_alfworld_full_data.py
build_api/: modules.html  trinity.algorithm.add_strategy.html  trinity.algorithm.advantage_fn.html  trinity.algorithm.entropy_loss_fn.html  trinity.algorithm.html  trinity.algorithm.kl_fn.html  trinity.algorithm.policy_loss_fn.html  trinity.algorithm.sample_strategy.html  trinity.buffer.html  trinity.buffer.reader.html  trinity.buffer.schema.html  trinity.buffer.writer.html  trinity.common.html  trinity.common.models.html  trinity.common.rewards.html  trinity.common.workflows.html  trinity.explorer.html  trinity.html  trinity.manager.config_registry.html  trinity.manager.html  trinity.plugins.html  trinity.trainer.html  trinity.trainer.verl.html  trinity.utils.html
en/main/: .buildinfo  api_reference.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
environments/: data.yaml  training.yaml
examples/RAFT_alfworld/: RAFT_alfworld_7B.yaml  RAFT_reflect_alfworld_7B.yaml
examples/agentscope_frozenlake/: README.md  agent.py  env.py  frozenlake_agent.yaml  utils.py  workflow.py
examples/agentscope_react/: README.md  gsm8k.yaml
examples/agentscope_tool_react/: README.md  agentscopev0_tool_react_dapo.yaml  agentscopev0_tool_react_gsm8k.yaml  agentscopev1_tool_react_dapo.yaml
main/: .buildinfo  genindex.html  index.html  main.html  objects.inv  py-modindex.html  searchindex.js
tests/: conftest.py  tools.py
trinity/: __init__.py
tutorial/: example_async_mode.html  example_data_functionalities.html  example_dpo.html  example_mix_algo.html  example_multi_turn.html  example_react.html  example_reasoning_advanced.html  example_reasoning_basic.html  example_step_wise.html  faq.html  synchronizer.html  trinity_configs.html  trinity_programming_guide.html
(+2091 files in other folders)
